test/sematic/resources/positive/basic_comparison5.tig
let
    type arr = array of int
    var a := arr [3] of 4
    var b := arr [3] of 4

in
    (
        a = b;
        a <> b;
        (a = b) = (a <> b)
    )
end