test/sematic/resources/negative/false_arraysub.tig
let
    type arr = array of int
    var a := arr [3] of 10
in
    a["a"]
end